// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabUIBase tab 1 is selected: content-box-t1 1`] = `
<div
  data-testid="content-box"
>
  Content 1
</div>
`;

exports[`TabUIBase tab 1 is selected: tab-bar-t1 1`] = `
<div
  data-testid="tab-bar"
>
  <button
    data-testid="tab-button"
    style="font-weight: bold;"
    type="button"
  >
    Tab 1
  </button>
  <button
    data-testid="tab-button"
    style="font-weight: normal;"
    type="button"
  >
    Tab 2
  </button>
</div>
`;

exports[`TabUIBase tab 2 is selected: content-box-t2 1`] = `
<div
  data-testid="content-box"
>
  Content 2
</div>
`;

exports[`TabUIBase tab 2 is selected: tab-bar-t2 1`] = `
<div
  data-testid="tab-bar"
>
  <button
    data-testid="tab-button"
    style="font-weight: normal;"
    type="button"
  >
    Tab 1
  </button>
  <button
    data-testid="tab-button"
    style="font-weight: bold;"
    type="button"
  >
    Tab 2
  </button>
</div>
`;
